Fix: Repaired broken css file

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,13 +14,21 @@
   /*border: 1px solid black !important;*/
   width: 100% !important;
 }
-.usertype-description, {
-  margin-top:5px !important;
-  border-radius: 5px !important;
-  border: 1px solid blue !important;
-  padding: 2px !imporant;
+.usertype-description {
+    /*margin-top:5px !important;*/
+    /*border-radius: 5px !important;*/
+    /*border: 1px solid blue !important;*/
+    /*padding: 2px !important;*/
+
+    background-color: #81D4FA !important;
+    border: 1px solid #03A9F4 !important;
+    border-radius: 4px !important;
+    padding: 4px !important;
+    margin-top: 10px !important;
 
 }
+
+
 .usertype-description p, .usertype-description h1, .usertype-description h2,.usertype-description h3,.usertype-description h4,.usertype-description h5{
   color: white;
 }
@@ -37,14 +45,14 @@
 #cs-split-left{
   padding: 0px;
   margin:  0px;
-  padding-left: 0px;
+  /*padding-left: 0px;*/
   padding-right:  5px;
 }
 #cs-split-right{
   padding: 0px;
   margin:  0px;
   padding-left: 5px;
-  padding-right:  px;
+  /*padding-right:  px;*/
 }
 .button-half{
   width:  100%;
